fix(push-ui): prevent vertical attachments from growing too large

--- a/packages/notificare-push-ui/css/notificare-push-ui.css
+++ b/packages/notificare-push-ui/css/notificare-push-ui.css
@@ -118,6 +118,7 @@
 
 .notificare__notification-attachment {
     max-width: 100%;
+    max-height: 250px;
 }
 
 .notificare__notification-content {
